fixed overflow

--- a/public/src/scss/components/CardCell/Base.scss
+++ b/public/src/scss/components/CardCell/Base.scss
@@ -29,7 +29,7 @@
 			flex-direction: column;
 			
 			> div {
-				padding: 8px;
+				padding: 12px 12px 8px 12px;
 			}
 			
 			> p {
