--- a/public/src/scss/components/Dashboard/DeckPage.scss
+++ b/public/src/scss/components/Dashboard/DeckPage.scss
@@ -354,6 +354,7 @@
 					position: relative;
 					width: 641px;
 					height: 381px;
+					cursor: pointer;
 					margin: 12px 0;
 					background: white;
 					border: 1px solid #eee;
@@ -372,8 +373,15 @@
 						}
 					}
 					
-					> .content {
-						padding: 8px;
+					> .content-container {
+						height: 100%;
+						overflow-y: auto;
+						padding: 20px;
+						
+						> .content {
+							min-height: 100%;
+							height: unset;
+						}
 					}
 					
 					> .toggle {
